<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:id="@+id/constraint_layout"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/user_id"
                app:layout_constraintTop_toTopOf="@+id/user_id" />
            <TextView
                android:id="@+id/tv_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/tv_name_title"
                app:layout_constraintTop_toTopOf="@+id/tv_name_title" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="#000"
                app:layout_constraintStart_toStartOf="@+id/tv_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title" />
            <TextView
                android:id="@+id/tv_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_value" />

            <TextView
                android:id="@+id/tv_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="#000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_phone_no_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#000"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_phone_no"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>